--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="timeComplexity.js"></script>
+    <script src="fibonacci.js"></script>
     <title>JS Algorithms</title>
   </head>
   <body></body>
